[tool.poetry]
name = "zdppy_password"
version = "0.1.0"
description = ""
authors = ["zhangdapeng520 <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pycryptodome = "^3.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
